diagweave/tests/ui/set-algebra/conflicting_variant_shape.rs
use diagweave::set;

set! {
    AuthError = {
        PermissionDenied { id: u32 },
    }

    ApiError = AuthError | {
        PermissionDenied { id: String },
    }
}

fn main() {}